--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URL= "mongodb+srv://yeizermarrugo:1234@cluster0.n6oonqj.mongodb.net/shareyouridea?retryWrites=true&w=majority"
 APPLICATION_NAME= "Share Your Idea"
+JWT_SECRET= NODE_YEIZER
