[ADD] swagger implemented

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_URL= "mongodb+srv://yeizermarrugo:1234@cluster0.n6oonqj.mongodb.net/sharey
 APPLICATION_NAME= "Share Your Idea"
 JWT_SECRET= NODE_YEIZER
 CACHE_KEY= MyStrongPasswordCache
+SWAGGER_DOC= swaggerDEV
