[ADD] travis ci implemented

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
+sudo: false
 language: node_js
 os: windows
 node_js: 
- - 7
+ - node
+script:
+  - npm test
 deploy:
   provider: heroku
   app: shareyouridea-nodejs-yeizer
