[ADD] travis ci implemented

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ deploy:
   provider: heroku
   app: shareyouridea-nodejs-yeizer
   api_key:
-    secure: 9c2420c8-a072-4a06-a382-cb90bca327fd
+    secure: $HEROKU_API_KEY
